--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,6 @@ kotlin.code.style=official
 exposed_version=0.41.1
 h2_version=2.1.214
 postgres_version=42.5.1
+
+hikaricp_version = 5.0.1
+koin_version = 3.4.0
